<resources>
    <string name="app_name">Expense Tracker App</string>

    <!--Toolbar and option Title-->
    <string name="toolbar_title">TOOLBAR NAME</string>
    <string name="clear_all">Clear All</string>
    <string name="toolbar_home">HOME</string>
    <string name="toolbar_list">EXPENSE LIST</string>
    <string name="toolbar_add_new">ADD NEW EXPENSE/INCOME</string>
    <string name="toolbar_trashcan">TRASHCAN</string>
    <string name="toolbar_logout">LOGOUT</string>
    <string name="toolbar_edit">Edit Expense</string>

    <!--For Nav Bar Toggle-->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!--Edit Text-->

    <!--Text View-->
    <!--Login and Register-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginRegis_text">Keep Track Of Your Spending</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="no_account">Don\'t have an account? Create here</string>
    <!--Home-->
    <string name="home_instruction">Filter expense by Year and Month:</string>
    <string name="home_start">Start: </string>
    <string name="home_end">End: </string>
    <string name="search">SEARCH</string>
    <!--Tips-->
    <string name="expense_list_tips">Tap onto the item to edit, swipe right to move to trashcan</string>
    <string name="trashcan_tips">Swipe right to delete permanently, swipe left to restore</string>
    <!--RV items-->
    <string name="type">Type: </string>
    <string name="category">Category: </string>
    <!--expense-->
    <string name="amount">Amount: </string>
    <string name="date">Date: </string>

    <!--Expense Types-->
    <string-array name="expense_type">
        <item name="expense">Expense</item>
        <item name="income">Income</item>
    </string-array>


    <!--Expense Categories-->
    <string-array name="expense_categories">
        <item name="income">Income</item>
        <item name="food">Food</item>
        <item name="medical">Healthcare</item>
        <item name="entertainment">Entertainment</item>
        <item name="education">Education</item>
        <item name="utilities">Utilities</item>
    </string-array>

</resources>