<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"> <!--make sure can only select one item-->
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/toolbar_home"/>
        <item
            android:id="@+id/menu_expense_list"
            android:icon="@drawable/ic_expense_list"
            android:title="@string/toolbar_list"/>
        <item
            android:id="@+id/menu_add_new"
            android:icon="@drawable/ic_add_new"
            android:title="@string/toolbar_add_new"/>
        <item
            android:id="@+id/menu_trashcan"
            android:icon="@drawable/ic_trashcan"
            android:title="@string/toolbar_trashcan"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_lgout"
            android:title="@string/toolbar_logout"/>

    </group>



</menu>