<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".AddExpense">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!--toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_blue"
            android:elevation="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_amount_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/light_black"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_amount_add"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:hint="Amount"
            android:textColor="@color/grey"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="7dp"/>

        <TextView
            android:id="@+id/tv_type_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/light_black"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/et_amount_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/sp_typeData_add"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:textColor="@color/darkest_blue"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_type_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="7dp"/>

        <TextView
            android:id="@+id/tv_category_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/light_black"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/sp_typeData_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/sp_categoryData_add"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:textColor="@color/darkest_blue"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="7dp"/>

        <TextView
            android:id="@+id/tv_date_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/light_black"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/sp_categoryData_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_datepicker_add"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:hint="Expense Date"
            android:textColor="@color/light_black"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="7dp"/>

        <ImageView
            android:id="@+id/iv_calendar_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            android:paddingTop="5dp"
            app:layout_constraintStart_toEndOf="@id/tv_datepicker_add"
            app:layout_constraintTop_toBottomOf="@id/tv_date_add"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="ADD"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/iv_calendar_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="add_onClick"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>